# xcb-wrapper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/testing_window/: CMakeLists.txt  main.cpp
include/xcb_wrapper/: atom.hpp  common.hpp  connection.hpp  cursor.hpp  drawable.hpp  event.hpp  instance.hpp  screen.hpp  window.hpp  window_params.hpp  xcb_wrapper.hpp
src/: atom.cpp  common.cpp  connection.cpp  cursor.cpp  drawable.cpp  event.cpp  screen.cpp  window.cpp  xcb_helper.hpp
